--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     background-color: black;
     justify-content:center;
+    align-items: center;
 }
 
 h1 {
@@ -29,4 +30,22 @@ h1 {
     margin : 50px;
     margin-top: 0px;
     justify-content: center;
+}
+
+.autoClicking {
+    margin: 50px;
+    display: flex;
+    border: 5px solid greenyellow;
+    padding: 5px;
+}
+
+.autoClicking ul {
+    color: white;
+    justify-content: right;
+}
+
+.autoClickerPic {
+    justify-content: left;
+    height: 100px;
+    width: 150px;
 }
