--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ h1 {
 .autoClicking {
     margin: 50px;
     display: flex;
-    border: 5px solid greenyellow;
+    border: 5px solid rgb(129, 214, 0);
     padding: 5px;
 }
 
