--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,17 @@ h1 {
     color: white;
 }
 
+header {
+    position: fixed;
+    text-align: center;
+    top: 0;
+    width: 100%;
+}
+
+#totalScore {
+    color: rgb(129, 214, 0);
+}
+
 #clicker {
     display: flex;
     justify-content: center;
@@ -35,7 +46,7 @@ h1 {
 .autoClicking {
     margin: 50px;
     display: flex;
-    border: 5px solid rgb(129, 214, 0);
+    border: 2px solid rgb(129, 214, 0);
     padding: 5px;
 }
 
